@@ -1,3 +1,4 @@
+.travis.yml
 Changes
 Makefile.PL
 LICENSE
@@ -14,6 +15,7 @@ lib/Data/BitStream/Vec.pm
 lib/Data/BitStream/WordVec.pm
 lib/Data/BitStream/Code/Additive.pm
 lib/Data/BitStream/Code/ARice.pm
+lib/Data/BitStream/Code/BER.pm
 lib/Data/BitStream/Code/Baer.pm
 lib/Data/BitStream/Code/BoldiVigna.pm
 lib/Data/BitStream/Code/Comma.pm
@@ -30,6 +32,7 @@ lib/Data/BitStream/Code/Omega.pm
 lib/Data/BitStream/Code/Rice.pm
 lib/Data/BitStream/Code/StartStop.pm
 lib/Data/BitStream/Code/Taboo.pm
+lib/Data/BitStream/Code/Varint.pm
 t/01-load.t
 t/02-basic.t
 t/05-coding-01.t
